# journal_manager

./: .gitignore  Makefile  README.md  journal.py  pyproject.toml
journal/: __init__.py  cli.py  journal.py  manager.py  project.py  task.py  utilities.py
