[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "journal"
version = "0.0.1"
authors = [
    {name = "Agustina Pesce", email = "pesce.agustina@gmail.com"},
]
description = "Journal manager developed in Python to help me to organize my week's tasks and have a log file with my activities in different projects."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = ["datetime", "click", "pathlib"]

[tool.setuptools.packages]
find = {}

[project.scripts]
journal = "journal:main"
